--- a/apps/web-app/src/app/app.html
+++ b/apps/web-app/src/app/app.html
@@ -2,7 +2,7 @@
 
 <mat-toolbar role="banner">
     <a class="brand" [routerLink]="''">
-      <img class="icon" src="bingo.svg">
+      <img class="icon" src="bingo.svg" alt="">
       BINGO TODO
     </a>
     <a>
