--- a/apps/web-app/src/app/features/board-list-view/board-list-view.css
+++ b/apps/web-app/src/app/features/board-list-view/board-list-view.css
@@ -10,6 +10,8 @@
   ul {
     list-style: none;
     padding: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
     display: flex;
     flex-direction: column;
     flex: 1;
