--- a/apps/web-app/src/app/features/board/board.html
+++ b/apps/web-app/src/app/features/board/board.html
@@ -1,12 +1,12 @@
-@for (row of rows(); track row;) {
+@for (row of rowIndexes(); track row;) {
 <div role="row">
-  @for (card of cards().slice(row * mode(), (row * mode() + mode())); track idx; let idx = $index) {
+  @for (card of cards().slice(row * boardSize(), (row * boardSize() + boardSize())); track idx; let idx = $index) {
   @if (previewMode() === "indicator") {
   <mat-card
     [class.bg-green]="card.IsBingo"
     [class.bg-yellow]="!!card.CheckedDateUTC"
     [class.bg-blue]="card.Selected"></mat-card>
-  } @else { @let actualIdx = idx + (mode() * row);
+  } @else { @let actualIdx = idx + (boardSize() * row);
   <mat-card
     [attr.aria-disabled]="!!card.CheckedDateUTC || previewMode()"
     [class.bg-green]="card.IsBingo"
