--- a/apps/web-app/src/app/features/board-details-form/board-details-form.css
+++ b/apps/web-app/src/app/features/board-details-form/board-details-form.css
@@ -2,10 +2,14 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  min-width: 260px;
+  width: min(100%, 450px);
 
   mat-form-field:has(mat-hint) {
     margin-bottom: 0.3rem;
+  }
+
+  .gray {
+    color: var(--mat-button-text-disabled-label-text-color, color-mix(in srgb, var(--mat-sys-on-surface) 38%, transparent))
   }
 }
 
