--- a/apps/web-app/src/app/pages/board-setup-page/board-setup.css
+++ b/apps/web-app/src/app/pages/board-setup-page/board-setup.css
@@ -26,6 +26,11 @@
     container: board-container / inline-size;
     display: flex;
     justify-content: center;
+
+    .container {
+      width: fit-content;
+      margin: 0;
+    }
   }
 
   .container,
@@ -36,6 +41,8 @@
   }
 
   .container {
+    width: min(100%, 450px);
+    margin-right: auto;
     & > *:first-child {
       margin-top: 1rem;
     }
