--- a/apps/web-app/src/app/features/board-list-view/board-list-view.html
+++ b/apps/web-app/src/app/features/board-list-view/board-list-view.html
@@ -18,7 +18,7 @@
 
     <mat-card
       aria-hidden="true"
-      [class.bg-green]="card.IsBingo"
+      [class.bg-green]="card.IsInBingoPattern"
       [class.bg-yellow]="!!card.CheckedDateUTC"
       [class.bg-blue]="card.Selected"
       (click)="checkCard(card)">
