--- a/apps/web-app/src/app/features/board/board.html
+++ b/apps/web-app/src/app/features/board/board.html
@@ -3,13 +3,13 @@
   @for (card of cards().slice(row * boardSize(), (row * boardSize() + boardSize())); track idx; let idx = $index) {
   @if (previewMode() === "indicator") {
   <mat-card
-    [class.bg-green]="card.IsBingo"
+    [class.bg-green]="card.IsInBingoPattern"
     [class.bg-yellow]="!!card.CheckedDateUTC"
     [class.bg-blue]="card.Selected"></mat-card>
   } @else { @let actualIdx = idx + (boardSize() * row);
   <mat-card
     [attr.aria-disabled]="!!card.CheckedDateUTC || previewMode()"
-    [class.bg-green]="card.IsBingo"
+    [class.bg-green]="card.IsInBingoPattern"
     [class.bg-yellow]="!!card.CheckedDateUTC"
     [class.bg-blue]="card.Selected"
     (click)="checkCard(card)">
