--- a/apps/web-app/src/app/pages/board-setup-page/board-setup.html
+++ b/apps/web-app/src/app/pages/board-setup-page/board-setup.html
@@ -21,6 +21,7 @@
       </div>
     </div>
   </mat-step>
+
   <mat-step [stepControl]="cardsFormArray" label="Board cells">
     <form class="container">
       <app-board [cards]="cardsPreview" [previewMode]="'indicator'"></app-board>
@@ -30,8 +31,8 @@
         <ng-container [formGroup]="control">
           <mat-form-field [subscriptSizing]="'dynamic'">
             <mat-label
-              >Row {{ Math.ceil((idx + 1) / boardCols) }}, Col
-              {{ (idx % boardCols) + 1 }}</mat-label
+              >Row {{ Math.ceil((idx + 1) / boardSize) }}, Col
+              {{ (idx % boardSize) + 1 }}</mat-label
             >
             <input
               matInput
@@ -47,7 +48,7 @@
               formControlName="Name" />
           </mat-form-field>
 
-          @if(($index + 1) % boardCols === 0 && !last) {
+          @if(($index + 1) % boardSize === 0 && !last) {
           <mat-divider></mat-divider>
           }
         </ng-container>
@@ -61,6 +62,18 @@
       </div>
     </form>
   </mat-step>
+
+  <mat-step [stepControl]="boardForm" label="Deadline and rewards">
+    <div class="container">
+      <app-deadline-reward-form [createMode]="true"></app-deadline-reward-form>
+
+      <div class="action-footer">
+        <button matButton matStepperPrevious>Back</button>
+        <button matButton matStepperNext>Next</button>
+      </div>
+    </div>
+  </mat-step>
+
   <mat-step>
     @let boardDetails = boardForm.getRawValue();
 
@@ -83,7 +96,7 @@
             [matTooltip]="buttonLabel"
             attr.aria-label="{{ buttonLabel }}"
             matIconButton
-            (click)="gridMode() === 'grid' ? gridMode.set('list') : gridMode.set('grid'); scrollTo($any({selectedIndex:2}))">
+            (click)="gridMode() === 'grid' ? gridMode.set('list') : gridMode.set('grid'); scrollTo($any({selectedIndex:3}))">
             <mat-icon>{{ gridMode() === "grid" ? "list" : "grid_on" }}</mat-icon>
           </button>
         </div>
