Board page and board list view tests

--- a/apps/web-app/src/app/pages/board-page/board-page.html
+++ b/apps/web-app/src/app/pages/board-page/board-page.html
@@ -75,7 +75,10 @@
 
   <mat-divider></mat-divider>
 </section>
-} @if (goalReached()) {
+}
+
+<!-- prettier-ignore -->
+@if (goalReached()) {
 <div>
   @if (board().GameMode === 'traditional') { {{endStateMessage()}}
   <button matButton (click)="continueAfterBingo()">Continue in TODO mode</button>
