--- a/apps/web-app/src/app/pages/board-setup-page/board-setup.html
+++ b/apps/web-app/src/app/pages/board-setup-page/board-setup.html
@@ -114,7 +114,7 @@
         }
 
         <div class="action-footer">
-          <button mat-stroked-button (click)="scramble()">Scramble</button>
+          <button mat-stroked-button (click)="scramble()">Shuffle</button>
           <button matButton matStepperPrevious>Back</button>
           <button mat-flat-button (click)="createBoard()">Create</button>
         </div>
