--- a/apps/web-app/src/app/features/save-warn-dialog/save-warn-dialog.html
+++ b/apps/web-app/src/app/features/save-warn-dialog/save-warn-dialog.html
@@ -1,9 +1,9 @@
-<h2 mat-dialog-title>Have you checked your cells?</h2>
+<h2 mat-dialog-title>Have you reviewed your cells?</h2>
 <mat-dialog-content>
   <app-message [title]="'Beware'" [type]="'warning'">
     <ul>
       <li>Resizing the board</li>
-      <li>Reordering or changing the cells</li>
+      <li>Reshuffling or changing the cells</li>
       <li>Changing visibility from and to local</li>
     </ul>
     <p>is not possible once the game starts, so consider reviewing these before pressing Start</p>
